<resources>
    <string name="app_name">iKidsv2</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fullname">Fullname</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="juan_dela_cruz">Juan Dela Cruz</string>
    <string name="teacher">Teacher</string>
    <string name="home">Home</string>
    <string name="lessons">Lessons</string>
    <string name="settings">Settings</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="create_lesson">Create Lesson</string>
    <string name="_09_17_22">09/17/22</string>
    <string name="my_lessons">My Lessons</string>
    <string name="open">OPEN</string>
    <string name="quiz">Quiz</string>
    <string name="save">Save</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="name">Name</string>
    <string name="create_class">Create Class</string>
    <string name="add_class">Add Class</string>
    <string name="code">CODE</string>
    <string name="_0">0</string>
    <string name="class_name">Class name</string>
    <string name="create_lesson_content">Create Lesson Content</string>
    <string name="decription">Decription</string>
    <string name="add_content">ADD CONTENT</string>
    <string name="contents">Contents</string>
    <string name="my_classes">My Classes</string>
    <string name="decribe_the_image_above">Decribe the image above</string>
    <string name="ilocano">Ilocano</string>
    <string name="english">English</string>
    <string name="tagalog">Tagalog</string>
    <string name="add_quiz">Add Quiz</string>
    <string name="word">Word</string>
    <string name="answer">Answer</string>
    <string name="question">Question</string>
    <string name="choice">Choice</string>
    <string name="class_code">Class Code</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="my_name_is">My name is ...</string>
    <string name="button_play">Button Play</string>
    <string name="play">Play</string>
    <string name="imageguess">imageGuess</string>
    <string name="are_you_sure_you_want_to_leave_the_game">Are you sure you want to leave the game?</string>
    <string name="my_students">My Students</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="total_score">Total Score</string>
    <string name="your_email">Your Email</string>
    <string name="back">back</string>
    <string name="avatars">Avatars</string>
    <string name="gender">Gender:</string>
    <string name="n_a">N/A</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="change_profile">Change Profile</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>

    <string-array name="languages">
        <item>Ilocano</item>
        <item>Tagalog</item>
        <item>English</item>
    </string-array>
</resources>