<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".student.UpdateProfileActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="16dp"
            android:backgroundTint="@color/black"
            android:id="@+id/buttonBack"
            android:background="@drawable/ic_baseline_arrow_back_ios_24"
            android:contentDescription="@string/back" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageStudentAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:civ_border_width="2dp"
            android:src="@drawable/teacher_profile" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:id="@+id/textStudentName"
                android:textSize="24sp"
                android:text="@string/juan_dela_cruz"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textSize="18sp"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/n_a"
                    android:id="@+id/textGender"
                    android:textSize="18sp"

                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profile"
                    android:id="@+id/buttonEditProfile"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

                <ImageButton
                    android:id="@+id/buttonLogout"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/ic_logout"
                    android:backgroundTint="#E53935" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:text="@string/avatars"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/row_avatars"
        android:id="@+id/recyclerviewAvatars"
        />

</LinearLayout>