<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="horizontal">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageStudentAvatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/teacher_profile" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/juan_dela_cruz"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:id="@+id/textStudentName"
            android:fontFamily="@font/alata"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_score"
                android:textSize="16sp"
                android:fontFamily="@font/alata"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:id="@+id/textScore"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/alata"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>