<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imageLesson"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
            android:background="@color/black"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:layout_marginHorizontal="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:id="@+id/textTitle"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <ImageView
                    android:id="@+id/imageIsAvailable"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:background="@drawable/ic_baseline_circle_24"
                    android:layout_margin="10dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:fontFamily="@font/alata"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/textDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_09_17_22"
                android:textColor="@color/black"
                android:fontFamily="@font/alata"
                android:layout_gravity="end|bottom"
                android:textSize="12sp" />
        </LinearLayout>



</LinearLayout>