<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".teacherNav.AccountFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userProfile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/teacher_profile" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textFullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/juan_dela_cruz"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textEmail"
                android:layout_marginVertical="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_gmail_com"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/textAccountType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher"
                android:textSize="16sp" />


        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:drawableLeft="@drawable/ic_baseline_edit_24"
            android:text="Edit"
            android:backgroundTint="#388E3C"
            />
        <Button
            android:id="@+id/buttonChangePassword"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Change Password"
            android:textColor="#D32F2F" />

        <ImageButton
            android:id="@+id/buttonLogout"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/ic_logout"
            android:backgroundTint="@color/black" />
    </LinearLayout>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>