<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/student_main_bg"
    tools:context=".dialogs.StudentLessonDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/buttonDismiss"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:backgroundTint="@color/black"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/ic_baseline_arrow_back_ios_24"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/cardLanguage"
            android:layout_marginHorizontal="10dp"
            app:cardCornerRadius="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/ilocano"
                    android:id="@+id/textLanguage"
                    android:textColor="@color/black"
                    android:fontFamily="@font/alata"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:fontFamily="@font/alata"
            android:textStyle="bold"
            android:id="@+id/textTitle"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:fontFamily="@font/alata"
            android:textSize="18sp"
            android:id="@+id/textDesc"
            android:gravity="center"
            />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerviewContents"
        tools:listitem="@layout/row_student_content"/>
</LinearLayout>